@@ -3,7 +3,7 @@
 # There may be dependencies I've forgotten to mention!
 # Version numbers may change as well!
 
-VERSION=0.5.10a2
+VERSION=0.5.10a3
 export DEBFULLNAME="Ben Croston"
 export DEBEMAIL="ben@croston.org"
 
