@@ -2,7 +2,11 @@ rpi.gpio (0.5.10a2-1) unstable; urgency=low
 
   * To match new Python package 0.5.10a2
 
+<<<<<<< local
+ -- Ben Croston <ben@croston.org>  Sun, 08 Feb 2015 23:34:19 +0000
+=======
  -- Ben Croston <ben@croston.org>  Wed, 11 Feb 2015 23:34:19 +0000
+>>>>>>> other
 
 rpi.gpio (0.5.9-1) unstable; urgency=low
 
